--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 fluent = "0.6"
 fluent-bundle = "0.6"
 fluent-syntax = "0.9"
-reqwest = "0.9"
+reqwest = { version = "0.10", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 clap = "2.33"
-indicatif = "0.11"
+indicatif = "0.14"
 mung = "0.1"
-base64 = "0.10"
-rustls = "0.14"
+base64 = "0.12"
+rustls = "0.17"
