--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,6 @@ authors = ["Kenton Hamaluik <kenton@rehabtronics.com>"]
 edition = "2018"
 
 [dependencies]
-fluent = "0.11"
-fluent-bundle = "0.11"
 fluent-syntax = "0.9"
 reqwest = { version = "0.10", features = ["blocking", "json"] }
 serde = { version = "1.0", features = ["derive"] }
@@ -17,4 +15,4 @@ mung = "0.1"
 base64 = "0.12"
 rustls = "0.17"
 simplelog = "0.7"
-log = "0.4"
+log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
